--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "lottie-react-native": "7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
