--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "^52.0.0",
     "expo-local-authentication": "~15.0.1",
     "expo-status-bar": "~2.0.0",
+    "lottie-react-native": "7.1.0",
     "nativewind": "^4.1.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -30,13 +31,13 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.14",
-    "lottie-react-native": "7.1.0"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.3.3"
   },
   "private": true
